--- a/exercise/L01-02/curso_rust_01-02_ControlFlow.ipynb
+++ b/exercise/L01-02/curso_rust_01-02_ControlFlow.ipynb
@@ -9,21 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of number is: 5\n"
+      "The value of number is: 10\n"
      ]
     }
    ],
    "source": [
     "//Ejemplo if en una sentencia let\n",
     "let condition = true;\n",
-    "let number = if condition { 5 } else { 6 };\n",
+    "let number = if condition { 10 } else { 6 };\n",
     "\n",
     "println!(\"The value of number is: {}\",number);"
    ]
@@ -114,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
